# libray-dataMovies

./: .gitignore  LICENSE  README.org  pyproject.toml
docs/: index.html
docs/dataMovies/: dataMovies.html  dataMoviesFeatures.html  index.html
docs/dataMovies/errors/: error.html  imdbServiceErrors.html  index.html
docs/dataMovies/serializers/: imdbSerializers.html  index.html
docs/dataMovies/serializers/utils/: dictionaryTransform.html  index.html
docs/dataMovies/services/: index.html
docs/dataMovies/services/imdbService/: imdbApiCall.html  imdbEndPoint.html  imdbRequests.html  imdbResponse.html  imdbService.html  index.html
docs/dataMovies/services/imdbService/utils/: imdbUtils.html  index.html
example/: .env.example  README.org  main.py
examples/: README.org
src/dataMovies/: __init__.py  dataMovies.py
src/dataMovies/errors/: error.py  imdbServiceErrors.py
src/dataMovies/serializers/: imdbSerializers.py
src/dataMovies/serializers/utils/: dictionaryTransform.py
src/dataMovies/services/imdbService/: __init__.py  imdbApiCall.py  imdbEndPoint.py  imdbRequests.py  imdbResponse.py  imdbService.py
src/dataMovies/services/imdbService/utils/: imdbUtils.py
tests/tests_dataMovies/: tests_dictionaryTransform.py  tests_imdbEndPoint.py  tests_imdbSerializers.py  tests_imdbUtils.py
