[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataMovies"
version = "0.0.13"
authors = [
  { name="Edouard Lacourt", email="edouardlacourt8@gmail.com" },
]
description = "Movies datasets package based on Imdb API."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    'pandas ~= 1.5.1',
    'python-dotenv ~= 0.21.0',
    'requests ~= 2.28.0'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rizerkrof/libray-dataMovies"
"Bug Tracker" = "https://github.com/rizerkrof/libray-dataMovies/issues"
